--- a/files/homeassistant/nodered_version/external_spool.yaml
+++ b/files/homeassistant/nodered_version/external_spool.yaml
@@ -51,15 +51,16 @@ elements:
         entity_id: button.{HA_PRINTER_DEVICE_NAME}_clear_external_spool
     type: icon
 image: /local/media/bambuprinter/spool.png
-style: |
-  ha-card {
-    margin-left: auto;
-    margin-right: auto;
-    width: 60%;
-    height: 60%;
-    background: none !important;
-    border: none !important;
-    box-shadow: none !important;
-    --tray_vt_color: {{state_attr('sensor.{HA_PRINTER_DEVICE_NAME}_vt_tray', 'color') }};
-    --tray_vt_bg: {% if is_state_attr('sensor.{HA_PRINTER_DEVICE_NAME}_vt_tray', 'in_use', true) %} rgba(255, 255, 126, 0.5); {% else %} rgba(0,0,0,0.5); {% endif %}
-  }
+card_mod:
+  style: |
+      ha-card {
+        margin-left: auto;
+        margin-right: auto;
+        width: 60%;
+        height: 60%;
+        background: none !important;
+        border: none !important;
+        box-shadow: none !important;
+        --tray_vt_color: {{state_attr('sensor.{HA_PRINTER_DEVICE_NAME}_vt_tray', 'color') }};
+        --tray_vt_bg: {% if is_state_attr('sensor.{HA_PRINTER_DEVICE_NAME}_vt_tray', 'in_use', true) %} rgba(255, 255, 126, 0.5); {% else %} rgba(0,0,0,0.5); {% endif %}
+      }
