--- a/files/homeassistant/hacs_version/external_spool.yaml
+++ b/files/homeassistant/hacs_version/external_spool.yaml
@@ -36,15 +36,16 @@ elements:
       pointer-events: none
       color: '#FFFFFF'
 image: /local/media/bambuprinter/spool.png
-style: |
-  ha-card {
-    margin-left: auto;
-    margin-right: auto;
-    width: 60%;
-    height: 60%;
-    background: none !important;
-    border: none !important;
-    box-shadow: none !important;
-    --tray_vt_color: {{state_attr('sensor.{HA_PRINTER_DEVICE_NAME}_externalspool_external_spool', 'color') }};
-    --tray_vt_bg: {% if is_state_attr('sensor.{HA_PRINTER_DEVICE_NAME}_externalspool_external_spool', 'active', true) %} rgba(255, 255, 126, 0.5); {% else %} rgba(0,0,0,0.5); {% endif %}
-  }
+card_mod:
+  style: |
+      ha-card {
+        margin-left: auto;
+        margin-right: auto;
+        width: 60%;
+        height: 60%;
+        background: none !important;
+        border: none !important;
+        box-shadow: none !important;
+        --tray_vt_color: {{state_attr('sensor.{HA_PRINTER_DEVICE_NAME}_externalspool_external_spool', 'color') }};
+        --tray_vt_bg: {% if is_state_attr('sensor.{HA_PRINTER_DEVICE_NAME}_externalspool_external_spool', 'active', true) %} rgba(255, 255, 126, 0.5); {% else %} rgba(0,0,0,0.5); {% endif %}
+      }
