Add HACS Cover Image
Add HACS cover image and make for all the state to appear be both running and pause

--- a/files/homeassistant/nodered_version/individual_printer_image.yaml
+++ b/files/homeassistant/nodered_version/individual_printer_image.yaml
@@ -25,7 +25,9 @@ elements:
       - type: conditional
         conditions:
           - entity: sensor.{HA_PRINTER_DEVICE_NAME}_print_status
-            state: RUNNING
+            state: 
+            - RUNNING
+            - PAUSE
         elements:
           - type: custom:hui-element
             card_type: picture-entity
