--- a/files/homeassistant/hacs_version/individual_printer_image_a1mini.yaml
+++ b/files/homeassistant/hacs_version/individual_printer_image_a1mini.yaml
@@ -5,7 +5,7 @@ elements:
   - type: conditional
     conditions:
       - entity: sensor.{HA_PRINTER_DEVICE_NAME}_print_status
-        state_not: OFFLINE
+        state_not: offline
     elements:
       - entity: light.{HA_PRINTER_DEVICE_NAME}_chamber_light
         type: state-icon
@@ -25,8 +25,28 @@ elements:
       - type: conditional
         conditions:
           - entity: sensor.{HA_PRINTER_DEVICE_NAME}_print_status
-            state: RUNNING
+            state: 
+            - running
+            - pause
         elements:
+          - type: conditional
+            conditions:
+              - entity: image.{HA_PRINTER_DEVICE_NAME}_cover_image
+                state_not: 
+                  - "unavailable"
+                  - "unknown"
+            elements:
+              - type: custom:hui-element
+                card_type: picture-entity
+                show_name: false
+                show_state: false
+                entity: image.{HA_PRINTER_DEVICE_NAME}_cover_image
+                style:
+                  top: 57%
+                  left: 38%
+                  transform: translate(-45%, -40%) scale(75%, 75%)
+                  '--ha-card-border-width': 0px
+                  '--ha-card-background': none
           - entity: sensor.{HA_PRINTER_DEVICE_NAME}_print_progress
             type: state-badge
             tap_action:
@@ -58,7 +78,7 @@ card_mod:
         background: none !important;
         border: none !important;
       }
-image: /local/media/bambuprinter/on_p1p.png
+image: /local/media/bambuprinter/a1mini_lighton.png
 entity: light.{HA_PRINTER_DEVICE_NAME}_chamber_light
 state_image:
   unavailable: /local/media/bambuprinter/a1mini_lightoff.png
