--- a/files/homeassistant/hacs_version/individual_printer_image_x1e.yaml
+++ b/files/homeassistant/hacs_version/individual_printer_image_x1e.yaml
@@ -25,8 +25,28 @@ elements:
       - type: conditional
         conditions:
           - entity: sensor.{HA_PRINTER_DEVICE_NAME}_print_status
-            state: running
+            state: 
+            - running
+            - pause
         elements:
+          - type: conditional
+            conditions:
+              - entity: image.{HA_PRINTER_DEVICE_NAME}_cover_image
+                state_not: 
+                  - "unavailable"
+                  - "unknown"
+            elements:
+              - type: custom:hui-element
+                card_type: picture-entity
+                show_name: false
+                show_state: false
+                entity: image.{HA_PRINTER_DEVICE_NAME}_cover_image
+                style:
+                  top: 50%
+                  left: 50%
+                  transform: translate(-45%, -40%) scale(75%, 75%)
+                  '--ha-card-border-width': 0px
+                  '--ha-card-background': none
           - entity: sensor.{HA_PRINTER_DEVICE_NAME}_print_progress
             type: state-badge
             tap_action:
