--- a/files/homeassistant/nodered_version/individual_control.yaml
+++ b/files/homeassistant/nodered_version/individual_control.yaml
@@ -256,9 +256,11 @@ cards:
             name: HMS Notifications
           - entity: sensor.{HA_PRINTER_DEVICE_NAME}_print_start_time
             name: Start Time
-            attribute: start_time
+            name: Start Time
+            secondary_info: last-changed
+            format: datetime
           - entity: sensor.{HA_PRINTER_DEVICE_NAME}_print_end_time
             name: End Time
-            attribute: end_time
+            format: datetime
           - entity: sensor.{HA_PRINTER_DEVICE_NAME}_print_remaining_time
             name: Remaining Time
