--- a/.github/workflows/media_archive.yml
+++ b/.github/workflows/media_archive.yml
@@ -10,12 +10,10 @@ jobs:
   To-Zip:
     runs-on: ubuntu-latest
     steps:
-      - run: |
-          ls ./
+      - name: Checkout 
+        uses: actions/checkout@v3
       - uses: actions/upload-artifact@v4
         with:
           name: media
-          path: files/media/
+          path: Bambu-HomeAssistant-Flows/files/media/
           if-no-files-found: error 
-      - run: |
-          ls ./
