--- a/.github/workflows/media_archive.yml
+++ b/.github/workflows/media_archive.yml
@@ -1,19 +1,21 @@
 name: GitHub Actions Zip Media
 on:
  workflow_dispatch:
+ schedule:
+  - cron: "30 1 1,15 * *"
  push:
    branches:
      - main
-     - master
-     - test
 jobs:
   To-Zip:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 
         uses: actions/checkout@v3
+        with:
+          node-version: "20.x"
       - uses: actions/upload-artifact@v4
         with:
-          name: media
+          name: bambu-ha-media-files
           path: /home/runner/work/Bambu-HomeAssistant-Flows/Bambu-HomeAssistant-Flows/files/media/
           if-no-files-found: error 
